# ChiExtract

./: .gitignore  CMakeLists.txt  README.md  archivemanager.cpp  archivemanager.h  main.cpp  resources.qrc
qml/: CreateView.qml  ExtractView.qml  Main.qml
